--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
     <section class="vision-mision" id="vision-mision">
         <div class="vision">
             <h2>Vision</h2>
-            <p>Ser una comunidad de aprendizaje donde sse brindan una educacion integral y humanista como marco del desarrolllo de las capacidades de nuestros estudiantes en un ambiente seguro donde se pontencian los valores y respetan sus caracteristicas individuales y colectivas formando alumnos creativos y reflexivos con una vision emprendedora para el exito.</p>
+            <p>Esta institucion Educativa es un espacio donde los alumnos logran una formacion integral y el desarrollo de habilidades para convivir armonialmente mediante acciones compartidas entre la escuela y la familia con el apoyo de las instalaciones gubernamentales y algunas organizaciones de la sociedad civil con el fin de crear ciudades libres responsables y valiosos que enriquezcan la humanidad del siglo XXI.</p>
         </div>
         <div class="logo-container">
             <img src="unnamed (1)(1).webp(1).webp" alt="Logo Escuela" class="logo1">
