--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
         <div class="contact-container">
             <div class="contact-info fade-in">
                 <h3>Información de Contacto</h3>
-                <p><strong>Dirección:</strong> Avenida Patria L. Poniente s/n,</p>
+                <p><strong>Dirección:</strong> Patria L. Pte. 203, Niños Heroes,</p>
                 <p><strong>Teléfono:</strong> 375 758 0629</p>
                 <p><strong>Email:</strong> secundaria-1-ameca@hotmail.com</p>
             </div>
