--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
         <div class="footer-content">
             <div class="footer-column">
                 <h3>Sec. Fed. José María Morelos & Pavón</h3>
-                <p>Formando líderes del mañana con educación de calidad y valores sólidos.</p>
+                <p></p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/sec.jose.maria.morelos/?locale=es_LA" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -796,7 +796,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 Sec. Fed. José María Morelos & Pavón. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Sec. Fed. José María Morelos & Pavón.</p>
         </div>
     </footer>
 
