--- a/index.html
+++ b/index.html
@@ -666,7 +666,9 @@
             <img src="unnamed (1)(1).webp" alt="Logo Escuela">
         </div>
         <ul class="nav-links">
-
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </ul>
         
     </nav>
