--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <div class="mision">
             <h2>Misión</h2>
-            <p>Ser una comunidad de aprendizaje donde sse brindan una educacion integral y humanista como marco del desarrolllo de las capacidades de nuestros estudiantes en un ambiente seguro donde se pontencian los valores y respetan sus caracteristicas individuales y colectivas formando alumnos creativos y reflexivos con una vision emprendedora para el exito.</p>
+            <p>Ser una comunidad de aprendizaje donde se brindan una educacion integral y humanista como marco del desarrolllo de las capacidades de nuestros estudiantes en un ambiente seguro donde se pontencian los valores y respetan sus caracteristicas individuales y colectivas formando alumnos creativos y reflexivos con una vision emprendedora para el exito.</p>
         </div>
     </section>
 
